attached_assets/Pasted-g-state-of-redis-server-service-with-SysV-service-script-with-usr-lib-systemd-systemd-sysv-install--1749551845782_1749551845783.txt
g state of redis-server.service with SysV service script with /usr/lib/systemd/systemd-sysv-install.
Executing: /usr/lib/systemd/systemd-sysv-install enable redis-server
Synchronizing state of postgresql.service with SysV service script with /usr/lib/systemd/systemd-sysv-install.
Executing: /usr/lib/systemd/systemd-sysv-install enable postgresql
Synchronizing state of nginx.service with SysV service script with /usr/lib/systemd/systemd-sysv-install.
Executing: /usr/lib/systemd/systemd-sysv-install enable nginx

added 123 packages, and audited 124 packages in 7s

17 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
CREATE ROLE
CREATE DATABASE
GRANT
nginx: the configuration file /etc/nginx/nginx.conf syntax is ok
nginx: configuration file /etc/nginx/nginx.conf test is successful
Rules updated
Rules updated (v6)
Rules updated
Rules updated (v6)
Rules updated
Rules updated (v6)
Rules updated
Rules updated (v6)
Firewall is active and enabled on system startup

                        -------------

__/\\\\\\\\\\\\\____/\\\\____________/\\\\____/\\\\\\\\\_____
 _\/\\\/////////\\\_\/\\\\\\________/\\\\\\__/\\\///////\\\___
  _\/\\\_______\/\\\_\/\\\//\\\____/\\\//\\\_\///______\//\\\__
   _\/\\\\\\\\\\\\\/__\/\\\\///\\\/\\\/_\/\\\___________/\\\/___
    _\/\\\/////////____\/\\\__\///\\\/___\/\\\________/\\\//_____
     _\/\\\_____________\/\\\____\///_____\/\\\_____/\\\//________
      _\/\\\_____________\/\\\_____________\/\\\___/\\\/___________
       _\/\\\_____________\/\\\_____________\/\\\__/\\\\\\\\\\\\\\\_
        _\///______________\///______________\///__\///////////////__


                          Runtime Edition

        PM2 is a Production Process Manager for Node.js applications
                     with a built-in Load Balancer.

                Start and Daemonize any application:
                $ pm2 start app.js

                Load Balance 4 instances of api.js:
                $ pm2 start api.js -i 4

                Monitor in production:
                $ pm2 monitor

                Make pm2 auto-boot at server restart:
                $ pm2 startup

                To go further checkout:
                http://pm2.io/


                        -------------

[PM2] Spawning PM2 daemon with pm2_home=/root/.pm2
[PM2] PM2 Successfully daemonized
[PM2][ERROR] File ecosystem.config.js malformated
SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:340:16)
    at ModuleLoader.importSyncForRequire (node:internal/modules/esm/loader:316:18)
    at loadESMFromCJS (node:internal/modules/cjs/loader:1371:24)
    at Module._compile (node:internal/modules/cjs/loader:1511:5)
    at Module._extensions..js (node:internal/modules/cjs/loader:1572:16)
    at Module.load (node:internal/modules/cjs/loader:1275:32)
    at Module._load (node:internal/modules/cjs/loader:1096:12)
    at Module.require (node:internal/modules/cjs/loader:1298:19)
    at require (node:internal/modules/helpers:182:18)
    at Common.parseConfig (/usr/lib/node_modules/pm2/lib/Common.js:331:12)
[PM2] Saving current process list...
[PM2][WARN] PM2 is not managing any process, skipping save...
[PM2][WARN] To force saving use: pm2 save --force
[PM2] Init System found: systemd
Platform systemd
Template
[Unit]
Description=PM2 process manager
Documentation=https://pm2.keymetrics.io/
After=network.target

[Service]
Type=forking
User=root
LimitNOFILE=infinity
LimitNPROC=infinity
LimitCORE=infinity
Environment=PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin:/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin
Environment=PM2_HOME=/root/.pm2
PIDFile=/root/.pm2/pm2.pid
Restart=on-failure

ExecStart=/usr/lib/node_modules/pm2/bin/pm2 resurrect
ExecReload=/usr/lib/node_modules/pm2/bin/pm2 reload all
ExecStop=/usr/lib/node_modules/pm2/bin/pm2 kill

[Install]
WantedBy=multi-user.target

Target path
/etc/systemd/system/pm2-root.service
Command list
[ 'systemctl enable pm2-root' ]
[PM2] Writing init configuration in /etc/systemd/system/pm2-root.service
[PM2] Making script booting at startup...
[PM2] [-] Executing: systemctl enable pm2-root...
Created symlink /etc/systemd/system/multi-user.target.wants/pm2-root.service → /etc/systemd/system/pm2-root.service.
[PM2] [v] Command successfully executed.
+---------------------------------------+
[PM2] Freeze a process list on reboot via:
$ pm2 save

[PM2] Remove init script via:
$ pm2 unstartup systemd

✅ 8Trader8Panda Production Deployment Complete!

🌐 Your platform is now live at:
   http://8.222.177.208:3000 (direct)
   http://8.222.177.208 (nginx proxy)
   http://8trader8panda8.xin (after DNS config)

📊 Management commands:
   pm2 status
   pm2 logs 8trader8panda
   pm2 restart 8trader8panda

root@iZt4ndx1mvq6rwcxzwalrjZ:~# # Go to the app directory
cd /opt/trading-app

# Stop any existing processes
pkill -f "node" 2>/dev/null || true
pm2 delete all 2>/dev/null || true

# Create a simple working server
cat > server.js << 'EOF'
const express = require('express');
const cors = require('cors');
const http = require('http');

const app = express();
const server = http.createServer(app);

app.use(cors());
app.use(express.json());

app.get('/', (req, res) => {
  res.send(`
<!DOCTYPE html>
<html>
<head>
    <title>8Trader8Panda - Live on Alibaba Cloud</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <style>
        body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; min-height: 100vh; }
        .container { max-width: 800px; margin: 0 auto; text-align: center; }
        .header { margin-bottom: 40px; }
        .logo { font-size: 4rem; margin-bottom: 20px; }
        .title { font-size: 3rem; font-weight: bold; margin-bottom: 10px; }
        .status { background: rgba(255,255,255,0.1); padding: 30px; border-radius: 15px; margin: 30px 0; }
        .online { color: #4ade80; font-weight: bold; }
        .api-links { margin: 30px 0; }
        .api-links a { background: rgba(255,255,255,0.2); color: white; padding: 10px 20px; margin: 10px; border-radius: 8px; text-decoration: none; display: inline-block; }
        .api-links a:hover { background: rgba(255,255,255,0.3); }
    </style>
</head>
<body>
    <div class="container">
        <div class="header">
            <div class="logo">🐼</div>
            <h1 class="title">8Trader8Panda</h1>
            <p>Professional Cryptocurrency Trading Platform</p>
        </div>
        
        <div class="status">
            <h2>System Status</h2>
echo "" Health: http://8.222.177.208:3000/api/health"ver starting..."s</p>
[1] 53921
file:///opt/trading-app/server.js:1
const express = require('express');
                ^

ReferenceError: require is not defined in ES module scope, you can use import instead
This file is being treated as an ES module because it has a '.js' file extension and '/opt/trading-app/package.json' contains "type": "module". To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
    at file:///opt/trading-app/server.js:1:17
    at ModuleJob.run (node:internal/modules/esm/module_job:263:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:540:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.19.2
[1]+  Exit 1                  node server.js
Server starting...
Skipping adding existing rule
Skipping adding existing rule (v6)
Firewall is active and enabled on system startup

✅ 8Trader8Panda is now LIVE!
🌐 Access: http://8.222.177.208:3000
📊 Health: http://8.222.177.208:3000/api/health

root@iZt4ndx1mvq6rwcxzwalrjZ:/opt/trading-app# 